--- a/PosterWebApplication/src/main/resources/application.properties
+++ b/PosterWebApplication/src/main/resources/application.properties
@@ -1,3 +1,4 @@
 ##logging.level.org.springframework=debug
 logging.level.org.springframework=info
 server.port=8080
+management.endpoints.web.exposure.include=*
