--- a/PosterWebApplication/src/main/resources/application.properties
+++ b/PosterWebApplication/src/main/resources/application.properties
@@ -2,3 +2,6 @@
 logging.level.org.springframework=info
 server.port=8080
 management.endpoints.web.exposure.include=*
+spring.h2.console.enabled=true
+spring.datasource.url=jdbc:h2:mem:testdb
+spring.jpa.defer-datasource-initialization=true
