--- a/product-price-service-v2/src/main/resources/application.properties
+++ b/product-price-service-v2/src/main/resources/application.properties
@@ -6,6 +6,7 @@ spring.h2.console.enabled=true
 spring.jpa.defer-datasource-initialization=true
 #eureka.instance.hostname=localhost
 eureka.instance.prefer-ip-address=true
+spring.h2.console.settings.web-allow-others=true
 eureka.client.serviceUrl.defaultZone=http://localhost:8761/eureka
 
 #retry
