--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -8,6 +8,54 @@ services:
       - "8000:8000"
     networks:
       - product-price-network
+    depends_on:
+      - named-server
+    environment:
+      EUREKA.CLIENT.SERVICEURL.DEFAULTZONE: http://named-server:8761/eureka
+      MANAGEMENT.ZIPKIN.TRACING.ENDPOINT: http://zipkin-server:9411/api/v2/spans
       
+  productprice-calculation:
+    image: tanay002/mv3-product-price-calculation-service-v2:0.0.1-SNAPSHOT
+    mem_limit: 700m
+    ports:
+      - "8100:8100"
+    networks:
+      - product-price-network
+    depends_on:
+      - named-server
+    environment:
+      EUREKA.CLIENT.SERVICEURL.DEFAULTZONE: http://named-server:8761/eureka
+      MANAGEMENT.ZIPKIN.TRACING.ENDPOINT: http://zipkin-server:9411/api/v2/spans  
+      
+  api-gateway:
+    image: tanay002/mv3-api-gateway-v2:0.0.1-SNAPSHOT
+    mem_limit: 700m
+    ports:
+      - "8765:8765"
+    networks:
+      - product-price-network
+    depends_on:
+      - named-server
+    environment:
+      EUREKA.CLIENT.SERVICEURL.DEFAULTZONE: http://named-server:8761/eureka
+      MANAGEMENT.ZIPKIN.TRACING.ENDPOINT: http://zipkin-server:9411/api/v2/spans      
+
+  named-server:
+    image: tanay002/mv3-naming-server-v2:0.0.1-SNAPSHOT
+    mem_limit: 700m
+    ports:
+      - "8761:8761"
+    networks:
+      - product-price-network
+
+  zipkin-server:
+    image: openzipkin/zipkin:2.23
+    mem_limit: 300m
+    ports:
+      - "9411:9411"
+    networks:
+      - product-price-network
+    restart: always #Restart if there is a problem starting up
+    
 networks:
   product-price-network:
