JdbcTemplate , Profile check, env

--- a/PosterWebApplication/src/main/resources/application.properties
+++ b/PosterWebApplication/src/main/resources/application.properties
@@ -2,6 +2,22 @@
 logging.level.org.springframework=info
 server.port=8080
 management.endpoints.web.exposure.include=*
+#management.endpoints.web.exposure.include=health,metrics
 spring.h2.console.enabled=true
 spring.datasource.url=jdbc:h2:mem:testdb
 spring.jpa.defer-datasource-initialization=true
+
+
+currency-services.url=http://www.google.com
+currency-services.username=tanay002
+currency-services.key=DYATWJWG
+
+#spring.profiles.active=dev
+
+
+# trace (Everythings)
+# debug (Lot more info)
+# info (info will print all the things log at info level)
+# warning (little more info from error)
+# error (only errors and exception)
+# off (turn of entire logging)
