--- a/PosterWebApplication/bin/src/main/resources/application.properties
+++ b/PosterWebApplication/bin/src/main/resources/application.properties
@@ -1,3 +1,7 @@
 ##logging.level.org.springframework=debug
 logging.level.org.springframework=info
 server.port=8080
+management.endpoints.web.exposure.include=*
+spring.h2.console.enabled=true
+spring.datasource.url=jdbc:h2:mem:testdb
+spring.jpa.defer-datasource-initialization=true
