JPA, JDBC ,JPA Data

--- a/PosterWebApplication/src/main/resources/application.properties
+++ b/PosterWebApplication/src/main/resources/application.properties
@@ -4,9 +4,9 @@ server.port=8080
 management.endpoints.web.exposure.include=*
 #management.endpoints.web.exposure.include=health,metrics
 spring.h2.console.enabled=true
-spring.datasource.url=jdbc:h2:mem:testdb
+spring.datasource.url=jdbc:h2:mem:testdb2
 spring.jpa.defer-datasource-initialization=true
-
+spring.jpa.show-sql=true
 
 currency-services.url=http://www.google.com
 currency-services.username=tanay002
