--- a/SpringWebApplication/src/main/resources/application.properties
+++ b/SpringWebApplication/src/main/resources/application.properties
@@ -1,1 +1,5 @@
-
+server.port=8080
+spring.mvc.view.prefix=/WEB-INF/jsp/
+spring.mvc.view.suffix=.jsp
+#logging.level.org.springframework=debug
+spring.mvc.format.date=yyyy-MM-dd
