--- a/SpringWebApplication/pom.xml
+++ b/SpringWebApplication/pom.xml
@@ -81,6 +81,12 @@
 	      	<artifactId>bootstrap-datepicker</artifactId>
 	      	<version>1.9.0</version>
         </dependency>
+        
+        <dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-security</artifactId>
+		</dependency>
+		
 	</dependencies>
 
 	<build>
