--- a/SpringWebApplication/src/main/resources/application.properties
+++ b/SpringWebApplication/src/main/resources/application.properties
@@ -3,3 +3,7 @@ spring.mvc.view.prefix=/WEB-INF/jsp/
 spring.mvc.view.suffix=.jsp
 #logging.level.org.springframework=debug
 spring.mvc.format.date=yyyy-MM-dd
+spring.datasource.url=jdbc:h2:mem:testdb
+spring.h2.console.enabled=true
+spring.jpa.defer-datasource-initialization=true
+spring.jpa.show-sql=true
